Vue "hello world"

--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>app</title>
+    <title>Monroe County Votes</title>
     <meta name="description" content="app">
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-    <app></app>
+    <div id="app">{{message}}</div>
+
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="src/app.js"></script>
   </body>
 </html>
